include_directories(BEFORE ${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(${COMMON_SRC_PATH} COMMON_SRC)
AUX_SOURCE_DIRECTORY(${COMMON_SRC_PATH}/rpc COMMON_SRC_RPC)

add_library(common_lib STATIC ${COMMON_SRC} ${COMMON_SRC_RPC})
set_target_properties(common_lib PROPERTIES COMPILE_FLAGS "-fPIC")

add_library(COMMON_OBJ OBJECT ${COMMON_SRC} ${COMMON_SRC_RPC})
